fixes3